# maintainer-os

./: .cursorrules  .env.example  .gitignore  .mcp.json  AGENTS.md  BRIEF.md  CLAUDE.md  LICENSE  docker-compose.yml  opencode.json  package.json  pyproject.toml
apps/api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/api/v1/: __init__.py  common_webhooks.py  dashboard.py  issues.py  pull_requests.py  release.py  reports.py  repositories.py  webhooks.py
apps/api/app/core/: config.py  database.py  memory.py
apps/api/app/db/: models.py
apps/api/app/services/: github_auth.py  review_service.py  triage_service.py
apps/api/app/tasks/: celery_app.py  release_task.py  reports.py  review.py  triage.py
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/components/dashboard/: recent-activity.tsx  stats-cards.tsx
apps/web/src/components/layout/: sidebar.tsx
apps/web/src/components/providers/: query-provider.tsx
apps/web/src/lib/: api-client.ts  use-api-hooks.ts
