[tool.poetry]
name = "maintainer-os-api"
version = "0.1.0"
description = "FastAPI backend for Maintainer OS"
authors = ["Maintainer OS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
neo4j = "^5.26.0"
qdrant-client = "^1.12.0"
redis = {extras = ["asyncio"], version = "^5.2.0"}
httpx = "^0.27.2"
PyGithub = "^2.4.0"
anthropic = "^0.40.0"
openai = "^1.54.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = {extras = ["cryptography"], version = "^2.9.0"}
python-multipart = "^0.0.12"
structlog = "^24.4.0"
celery = {extras = ["redis"], version = "^5.4.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.4"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
